<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/repository_longpress">
		<item android:id="@+id/repository_longpress_log"
			android:orderInCategory="1" android:title="@string/repository_longpress_log" />
		<item android:id="@+id/repository_longpress_browse"
			android:orderInCategory="1" android:title="@string/repository_longpress_browse" />
		<item android:id="@+id/repository_longpress_modify"
			android:orderInCategory="1" android:title="@string/repository_longpress_modify" />
		<item android:id="@+id/repository_longpress_copy"
			android:orderInCategory="1" android:title="@string/repository_longpress_copy" />
		<item android:id="@+id/repository_longpress_delete"
			android:orderInCategory="2" android:title="@string/repository_longpress_delete" />
	</group>
</menu>
